- SSH subagent (for collecting data and executing actions via SSH)
- Zone ID can be set for agent in SNMP proxy mode
- Zones has common default proxy node for all protocols
- Zone's proxy node can be placed inside that zone
- Syslog proxy in agent
- Built-in superuser account renamed to "system"
- Default "admin" account now is ordinary member of "Admins" group without built-in privileges
- New agent metrics for self-monitoring:
	Agent.SyslogProxy.IsEnabled, Agent.SyslogProxy.ReceivedMessages, Agent.SyslogProxy.QueueSize
- Management console
	- New editors for Agent Config Policy and Log Parser Policy. 
	- DCI summary tables with empty menu path not shown in object context menu
- Fixed issues: #69, #92, #397, #521, #568, #723, #795, #906, #909, #942, #949, #959, #992, #999, #1006, #1015, #1051, #1096, #1100, #1159, #1187, #1191, #1230, #1237, #1245, #1246, #1249, #1254, #1261, #1263, #1275, #1282, #1284, #1288


*
* 2.0.6
*

- Fixed incorrect interface network mask reported by agent on Windows XP and Windows Server 2003
- Added option to turn off quotes in AT+CMGS command in generic SMS driver
- Improved compatibility with different GSM modem types in generic SMS driver
- Fixed SQL errors when saving LDAP users to database
- Fixed excessive temporary files creation by web UI
- Fixed build errors on Solaris 11
- Fixed memory leak in Oracle DB driver
- Fixed bug in SNMP transport causing false timeout errors
- New agent metrics for self-monitoring:
	Agent.Proxy.ActiveSessions, Agent.Proxy.ConnectionRequests, Agent.Proxy.IsEnabled,
	Agent.SNMP.IsProxyEnabled, Agent.SNMP.IsTrapProxyEnabled, Agent.SNMP.Requests,
	Agent.SNMP.Responses, Agent.SNMP.ServerRequests
- Management console
	- Fixed glitches in table value view
- Fixed issues: #753, #826, #851, #987, #1273, #1277, #1278, #1280


*
* 2.0.5
*

- Data collection script can return null to indicate data collection error
- Added option to set type of each varbind in nxsnmpset